[package]
name = "nepheliad"
version = "0.1.0"
authors = ["Sean Kell <sean.michael.kell@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
spin = "0.3.4"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[dependencies.bitflags]
git = "https://github.com/phil-opp/bitflags.git"
branch = "no_std"